--- a/etc/pip/Pipfile
+++ b/etc/pip/Pipfile
@@ -5,7 +5,7 @@ name = "pypi"
 
 [packages]
 django = "==4.1.5"
-psycopg2 = "==2.9.5"
+psycopg2-binary = "==2.9.3"
 pillow = "==9.3.0"
 django-split-settings = "==1.2.0"
 toml = "==0.10.2"
