--- a/etc/docker/Dockerfile
+++ b/etc/docker/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 
 RUN apt-get update -y && \
     apt-get install gcc libcurl4-openssl-dev libssl-dev curl gcc -y && \
-    rm -rf /var/lib/apt/lists/* \
+    rm -rf /var/lib/apt/lists/*
 
 COPY src/. /app/
 COPY etc/pip/. /app/
